feat(first app completed):

--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -9,6 +9,9 @@
   <button (click)="share(product.name)">
     Share
   </button>
+
+  <app-product-alerts [product]="product" (notify)="onNotify()">
+  </app-product-alerts>
 </div>
 <!--
 Copyright Google LLC. All Rights Reserved.
