--- a/src/styles.less
+++ b/src/styles.less
@@ -20,6 +20,7 @@ body {
 
 router-outlet + *  {
   padding: 0 16px;
+  flex-grow: 1;
 }
 
 /* Text */
@@ -125,10 +126,9 @@ app-top-bar h1 {
 
 /* Checkout Cart, Shipping Prices */
 
-.cart-item, .shipping-item {
-  width: 100%;
-  min-width: 400px;
-  max-width: 450px;
+.cart-item,
+.shipping-item {
+  box-sizing: border-box;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -137,6 +137,7 @@ app-top-bar h1 {
   border-radius: 2px;
   background-color: #EEEEEE;
 }
+
 
 
 /*
